# nanobind_module_skeleton

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  reinstall.sh
.github/workflows/: build_wheels.yml
src/XXXXXX/: __init__.py  __main__.py
src/XXXXXX/cpp/XXXXXX/: hello.cpp  hello.h  py_exports.cpp
tests/Python/: test_basic.py
